resoucefulfox/force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>