resoucefulfox/force-app/main/default/objects/Product__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Material</label>
    <length>80</length>
    <type>Text</type>
</CustomField>